# ai-sports-coach

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SESSION_STATE.md  docker-compose.yml  plan.md  pyproject.toml
.hermes/plans/: 2026-05-14_knowledge-expansion-plan.md  2026-05-14_production-readiness.md
docker/: Dockerfile
docs/: architecture.md  base-connaissances.md  coaching.md  concurrents.md  deploy.md  idees.md  pre-launch-checklist.md  rollback.md
docs/plans/: 2026-05-20-coach-memory.md
frontend/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vercel.ts
frontend/e2e/: auth.spec.ts  chat.spec.ts  onboarding.spec.ts
frontend/public/: manifest.json  offline.html  sw.js
frontend/scripts/: generate-icons.mjs
knowledge/: cyclisme-index-patch.yaml  index.yaml  natation-index-patch.yaml  selector-spec.md  trail-index-patch.yaml  triathlon-index-patch.yaml  vague2-index-patch.yaml  vague3-index-patch.yaml
knowledge/domains/: biomecanique-course.md  blessures-prevention.md  cyclisme-entrainement-specifique.md  cyclisme-equipement-materiel.md  cyclisme-puissance-metabolisme.md  cyclisme-securite-circulation.md  cyclisme-tactique-strategie.md  cyclisme-technique-pedalage.md  echauffement-retour-au-calme.md  entrainement-croise.md  environnement-et-conditions.md  equipement-running.md  equipement-trail.md  force-pour-coureur.md  gestion-course.md  gestion-ultra-distance.md  materiel-et-equipement.md  norvegienne.md  (+19 more)
migrations/: add_match_user_facts.sql  add_session_summary.sql  create_user_facts.sql
scripts/: schema.sql  simulate_conversations.py  simulate_month.py  test_memory.py
simulation_results/: simulation_20260529_102947.json  simulation_20260529_113332.json
(+129 files in other folders)
