[project]
name = "ai-sports-coach"
version = "0.1.0"
description = "Assistant d'entraînement IA conversationnel"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4",
    "openai",          # OpenRouter compatible OpenAI SDK
    "google-generativeai",
    "supabase",
    "python-dotenv",
    "pydantic",
    "pyyaml",
    "structlog",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "cryptography>=42.0.0",
    "pywebpush>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests d'intégration (accès DB, LLM réel)",
]
